docs updated and some bugs fixed